gobmkida/c2/ascii_showboard
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:713:12: error: array type 'char [19]' is not assignable
hspots[20] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:714:12: error: array type 'char [19]' is not assignable
hspots[58] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:715:12: error: array type 'char [19]' is not assignable
hspots[22] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:716:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:717:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:726:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:729:1: error: use of undeclared identifier 'byte_B6402F'
byte_B6402F[2 * v23 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:730:17: error: array type 'char [19]' is not assignable
hspots[v0 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:731:1: error: use of undeclared identifier 'byte_B6402C'
byte_B6402C[v0 + v24] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:733:18: error: array type 'char [19]' is not assignable
hspots[v25 + 57] = 43; 
~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:735:22: error: array type 'char [19]' is not assignable
hspots[19 * v25 + 3] = 43; 
~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:736:1: error: use of undeclared identifier 'byte_B6402C'
byte_B6402C[v0 + v26] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:737:19: error: array type 'char [19]' is not assignable
hspots[v25 + v24] = 43; 
~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:738:19: error: array type 'char [19]' is not assignable
hspots[v25 + v26] = 43; 
~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:742:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:744:16: error: array type 'char [19]' is not assignable
hspots[v5 + 2] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:745:17: error: array type 'char [19]' is not assignable
hspots[v3 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:746:17: error: array type 'char [19]' is not assignable
hspots[v3 + v5] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:747:40: error: array type 'char [19]' is not assignable
hspots[20 * ( ( unsigned int)v0 >> 1)] = 43; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:752:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:754:1: error: use of undeclared identifier 'byte_B6402F'
byte_B6402F[2 * v22 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:755:17: error: array type 'char [19]' is not assignable
hspots[v0 + 53] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:756:1: error: use of undeclared identifier 'byte_B6402C'
byte_B6402C[2 * v22 - 4 + v0 + v0] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:760:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:762:16: error: array type 'char [19]' is not assignable
hspots[v4 + 2] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:763:17: error: array type 'char [19]' is not assignable
hspots[v3 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/interface/play_ascii.c:764:17: error: array type 'char [19]' is not assignable
hspots[v3 + v4] = 43; 
~~~~~~~~~~~~~~~ ^
27 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ascii_showboard/src/obj/2/play_ascii.o] Error 1
